--- a/package.json
+++ b/package.json
@@ -34,5 +34,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
+  },
+  "homepage": "https://dennisvoutos.github.io/My-CV",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d build"
 }
