--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0"
+    "gh-pages": "^6.3.0",
+    "husky": "^9.1.7",
+    "standard-version": "^9.5.0"
   },
   "homepage": "https://dennisvoutos.github.io/My-CV"
 }
