--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^5.23.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.4.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
